// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCardMeta renders full blog card meta 1`] = `
<div
  className="jsx-1168433805 card-meta"
>
  <div
    className="jsx-1168433805 authors"
  >
    <span
      className="jsx-1168433805"
    >
      by
    </span>
    <span
      className="jsx-1168433805 author"
    >
      test-name
    </span>
  </div>
  <span
    className="jsx-1168433805 publish-date"
  >
    13 August, 2019
  </span>
</div>
`;

exports[`BlogCardMeta renders full blog card meta with multiple authors 1`] = `
<div
  className="jsx-1168433805 card-meta"
>
  <div
    className="jsx-1168433805 authors"
  >
    <span
      className="jsx-1168433805"
    >
      by
    </span>
    <span
      className="jsx-1168433805 author"
    >
      test-name
    </span>
    <span
      className="jsx-1168433805 author"
    >
      test-name-2
    </span>
  </div>
  <span
    className="jsx-1168433805 publish-date"
  >
    13 August, 2019
  </span>
</div>
`;
